--- a/feature1.html
+++ b/feature1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=<h1<>, initial-scale=1.0">
-    <title>sorry for title</title>
+    <title>this page for demo checing</title>
 </head>
 <body>
     <h1>this is first chnage</h1>
