--- a/feature2.html
+++ b/feature2.html
@@ -7,7 +7,12 @@
 </head>
 <body>
     <h1>whta is your name?</h1>
+    <h1>my name is rajkumar singh</h1>
+
     <h2>what is your father name</h2>
+    <h2>my father name lal bahadur singh</h2>
+
     <h3>what is your mother name</h3>
+    <h3>my mother name ketki devi</h3>
 </body>
 </html>
